--- a/Revisionary/tsconfig.json
+++ b/Revisionary/tsconfig.json
@@ -13,5 +13,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-, "app/(tabs)/_layout.js", "app/(tabs)/explore.js", "app/(tabs)/index.js", "app/(tabs)/screens/newvideo.js"  ]
+, "app/(tabs)/_layout.js", "app/(tabs)/explore.js", "app/index.js", "app/(taapp/screens/newvideo.js/_layout.tsx"  ]
 }
